--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- START MENU -->
   <div id="menu">
-    <p>Select Difficulty:</p>
+    <p><strong>Select Difficulty:</strong></p>
     <label>
       <input type="radio" name="difficulty" value="easy" checked>
       Easy
@@ -21,6 +21,19 @@
       <input type="radio" name="difficulty" value="hard">
       Hard
     </label>
+
+    <br><br>
+
+    <p><strong>Select Word Set:</strong></p>
+    <label>
+      <input type="radio" name="wordset" value="normal" checked>
+      Normal Words
+    </label>
+    <label>
+      <input type="radio" name="wordset" value="harry">
+      Harry Potter Words
+    </label>
+
     <br><br>
     <button id="startBtn">Start Game</button>
   </div>
