Changed the headers

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- MENU -->
   <div id="menu">
-    <p><strong>Select Difficulty:</strong></p>
+    <p class="difficulty"><strong>Select Difficulty:</strong></p>
     <label>
       <input type="radio" name="difficulty" value="easy" checked>
       Easy
