Added a countdown at the beginning

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
   <!-- GAME -->
   <div id="gameContainer" style="display:none;">
     
+    <!-- Countdown -->
+    <div id="countdown" style="display:none; font-size: 100px; font-weight: bold; text-align: center; margin-bottom: 30px;"></div>
+
+
     <div id="battlefield">
       <img id="charLeft" src="player.png" alt="Player">
       
