removed play again button

--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
     />
 
     <p id="result"></p>
-    <div id="endButtons" style="display:none; margin-top: 20px;">
-      <button id="playAgainBtn">Play Again</button>
+    <div id="endButtons" style="display:none">
+      <!-- <button id="playAgainBtn">Play Again</button> -->
       <button id="mainMenuBtn">Main Menu</button>
     </div>
+
 
   </div>
 
