Revert "Update index.html"
This reverts commit 9e0146cc92b45da4b2a12dcf8865857d598620fc.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <div id="game-container">
     
     <!-- Countdown -->
+    <div id="countdown"></div>
 
 
     <div id="battlefield">
@@ -63,7 +64,7 @@
       <img id="clash-point" src="./images/clash.gif" alt="Clash Animation">
       
     </div>
-    <div id="countdown"></div>
+    <div id="countdown" style="display:none; font-size: 100px; font-weight: bold; text-align: center; margin-bottom: 30px;"></div>
     <div id="wordsRow">
       <!-- Lines will be added dynamically -->
     </div>
