added play again button

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <p id="result"></p>
     <div id="endButtons" style="display:none">
-      <!-- <button id="playAgainBtn">Play Again</button> -->
+      <button id="playAgainBtn">Play Again</button>
       <button id="mainMenuBtn">Main Menu</button>
     </div>
 
