added winning animations hihi

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
       <img id="explosionLeft" class="explosion hidden" src="./images/explosion.gif" />
       <img id="explosionRight" class="explosion hidden" src="./images/explosion.gif" />
 
+      <img id="winLeft" src="./images/win_player.gif" class="hidden winAnim">
+      <img id="winRight" src="./images/win_computer.gif" class="hidden winAnim">
+
     </div>
 
     <div id="wordsRow">
