--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     <br><br>
 
     <p class="wordset">Select Word Set:</p>
-    <label class="wordset-option">
-      <input type="radio" name="wordset" value="normal">
+    <label class="wordset-option" for="normal">
+      <input type="radio" name="wordset" value="normal" id="normal">
       <span class="tooltip no-animate">
       Muggle Tongue
       <span class="tooltip-text"><i>The everyday language of non-magical humans.
       </i></span>
       </span>
     </label>
-    <label class="wordset-option">
-      <input type="radio" name="wordset" value="harry">
+    <label class="wordset-option" for="harry">
+      <input type="radio" name="wordset" value="harry" id="harry">
       <span class="tooltip no-animate">
       The Spellbook of Words
       <span class="tooltip-text">
