--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <!-- MENU -->
   <div id="menu">
+
+    <!-- Difficulty Selection -->
     <p class="difficulty">Select Difficulty:</p>
     <label class="option" for="easy">
       <!-- name: name of the input -->
@@ -27,6 +29,7 @@
 
     <br><br>
 
+    <!-- Word Set Selection -->
     <p class="wordset">Select Word Set:</p>
     <label class="wordset-option" for="normal">
       <input type="radio" name="wordset" value="normal" id="normal">
