--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </label>
 
     <br><br>
+    <!-- Start Button -->
     <button id="start-btn">Start Game</button>
   </div>
 
@@ -84,6 +85,7 @@
     <!-- Lines will be added dynamically -->
     </div>
 
+    <!-- Typing Input -->
     <input
       type="text"
       id="typing-input"
@@ -91,8 +93,10 @@
       autocomplete="off"
       autofocus
     />
-
+    <!-- Result Display -->
     <p id="result"></p>
+
+    <!-- End Buttons -->
     <div id="end-buttons" style="display:none">
       <button id="play-again-btn">Play Again</button> 
       <button id="main-menu-btn">Main Menu</button>
