--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- VIDEO BACKGROUND -->
+  <video id="bgVideo" autoplay muted loop playsinline>
+    <source src="./images/background3.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
 
   <h1>Type Casting Duel</h1>
 
